light theme review v1 edits, applied to dark theme as needed

--- a/dark/my-theme.scss
+++ b/dark/my-theme.scss
@@ -46,6 +46,7 @@ $slider-thumb-border: $input-background;
       letter-spacing: 0.5px,
       white-space: nowrap,
       text-overflow: ellipsis,
+      font-weight: 400,
     ),
     $styles-caption: (letter-spacing: 0),
     $styles-overline: (font-size: 0.75rem, font-weight: normal, letter-spacing: 0)
