--- a/light/my-theme.scss
+++ b/light/my-theme.scss
@@ -28,6 +28,7 @@ $dark-theme-primary: #4dacff; // Dark Theme --primary
 $dark-theme-primary-light: #92cbff; // Dark Theme --primaryLight
 $table-header-background: $global-app-header;
 $table-row-hover-background: $primary-dark-hover;
+$table-row-background: $primary-dark;
 $slider-track-background: $secondary-text;
 $slider-thumb-background: $primary-dark;
 $slider-thumb-border: $input-background;
