--- a/light/my-theme.scss
+++ b/light/my-theme.scss
@@ -27,8 +27,8 @@ $list-selected: #1c3f5e; // -- Given by Daniel for List/Drawer selected backgrou
 $dark-theme-primary: #4dacff; // Dark Theme --primary
 $dark-theme-primary-light: #92cbff; // Dark Theme --primaryLight
 $table-header-background: $global-app-header;
-$table-row-hover-background: $primary-dark-hover;
-$table-row-background: $primary-dark;
+$table-row-hover-background: rgba($primary-dark, 0.2);
+$table-row-selected-background: $primary;
 $slider-track-background: $secondary-text;
 $slider-thumb-background: $primary-dark;
 $slider-thumb-border: $input-background;
